Cambios en tablas de colegios y otras 4

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+ /* app/assets/stylesheets/application.css o .scss */
+.custom-select {
+    width: 300px; /* Ajusta el ancho según tus necesidades */
+  }
+  
