--- a/app/views/alumnos/new.html.erb
+++ b/app/views/alumnos/new.html.erb
@@ -1,11 +1,11 @@
-<% content_for :title, "New alumno" %>
+<% content_for :title, "Nuevo alumno" %>
 
-<h1>New alumno</h1>
+<h1>Nuevo alumno</h1>
 
 <%= render "form", alumno: @alumno %>
 
 <br>
 
 <div>
-  <%= link_to "Back to alumnos", alumnos_path %>
+  <%= link_to "Volver a alumnos", alumnos_path, class: "btn btn-secondary" %>
 </div>
