--- a/app/views/colegios/_form.html.erb
+++ b/app/views/colegios/_form.html.erb
@@ -22,6 +22,6 @@
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit "Guardar", class: "btn btn-success mt-3"%>
   </div>
-<% end %>
+<% end %> 
