--- a/app/views/materias/_form.html.erb
+++ b/app/views/materias/_form.html.erb
@@ -18,15 +18,16 @@
 
   <div>
     <%= form.label :profesor_id, style: "display: block" %>
-    <%= form.text_field :profesor_id %>
+    <%= form.collection_select :profesor_id, @profesores, :id, :nombre, { prompt: "Selecciona un profesor" }, { class: "custom-select" } %>
   </div>
 
   <div>
     <%= form.label :colegio_id, style: "display: block" %>
-    <%= form.text_field :colegio_id %>
+    <%= form.collection_select :colegio_id, @colegios, :id, :nombre, { prompt: "Selecciona un colegio" }, { class: "custom-select" } %>
   </div>
 
+
   <div>
-    <%= form.submit %>
+    <%= form.submit "Guardar", class: "btn btn-success mt-3"%>
   </div>
 <% end %>
