--- a/app/views/materias/show.html.erb
+++ b/app/views/materias/show.html.erb
@@ -1,10 +1,56 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @materia %>
+<% content_for :title, "Materias" %>
+
+<h1 class="display-6">Tabla de Materias</h1>
+
+<% if flash[:alert] %>
+  <div id="flash-alert" class="alert alert-danger">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
+
+<table class="table table-striped table-bordered">
+  <thead>
+    <tr>
+      <th>Nombre</th>
+      <th>Alumnos</th>
+      <th>Profesor</th>
+      <th>Colegio</th>
+      <th>Editar</th>
+      <th>Eliminar</th>
+    </tr>
+  </thead>
+  <tbody>
+        <tr>
+          <td><%= @materia.nombre %></td>
+          <td>
+            <table class="table table-sm">
+            <thead>
+              <tr>
+                <th>Alumno</th>
+                <th>Nota</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @materia.notas.each do |nota| %>
+                <tr>
+                <td><%= link_to nota.alumno.nombre, alumno_path(nota.alumno.id), class: "text-primary" %></td> 
+                <td><%= link_to nota.promedio, nota_path(nota.id), class: "text-primary" %></td> 
+                </tr>
+              <% end %>
+            </tbody>
+            </table>
+          </td>
+          <td><%= link_to @materia.profesor.nombre, profesor_path(@materia.profesor.id), class: "text-primary" %></td>
+          <td><%= link_to @materia.colegio.nombre, colegio_path(@materia.colegio.id), class: "text-primary" %></td>  
+          <td><%= link_to "Editar materia", edit_materia_path(@materia), class: "btn btn-warning" %></td> 
+          <td><%= button_to "Eliminar materia", @materia, method: :delete, class: "btn btn-danger" %></td> 
+        </tr>
+  </tbody>
+</table>
 
 <div>
-  <%= link_to "Edit this materia", edit_materia_path(@materia) %> |
-  <%= link_to "Back to materias", materias_path %>
+  <%= link_to "Volver a materias", materias_path, class: "btn btn-secondary" %>
 
-  <%= button_to "Destroy this materia", @materia, method: :delete %>
 </div>
