--- a/app/views/alumnos/show.html.erb
+++ b/app/views/alumnos/show.html.erb
@@ -1,10 +1,71 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @alumno %>
+<% content_for :title, "Alumnos" %>
+
+<h1 class="display-6">Información del Alumno</h1>
+
+<% if flash[:alert] %>
+  <div id="flash-alert" class="alert alert-danger">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
+
+<table class="table table-striped table-bordered">
+  <thead>
+    <tr>
+      <th>Nombre Alumno</th>
+      <th>Colegio</th>
+      <th>Profesores</th>
+      <th>Notas</th>
+      <th>Editar</th>
+      <th>Eliminar</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr> 
+      <td><%= @alumno.nombre %></td>
+      <td><%= link_to @alumno.colegio.nombre, colegio_path(@alumno.colegio.id), class: "text-primary" %></td>
+      <td>
+        <table class="table table-sm">
+          <tbody>
+            <% @profesores.each do |profesor| %>
+              <tr>
+                <td><%= link_to profesor.nombre, profesor_path(profesor), class: "text-primary" %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </td>
+      <td>
+        <table class="table table-sm">
+          <thead>
+            <tr>
+              <th>Materia</th>
+              <th>Promedio</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @alumno.materias.each do |materia| %>
+              <% materia.notas.where(alumno_id: @alumno.id).each do |nota| %>
+                <tr>
+                  <td><%= link_to materia.nombre, materia_path(materia.id), class: "text-primary" %></td>
+                  <td><%= link_to nota.promedio, nota_path(nota.id), class: "text-primary" %></td>
+                </tr>
+              <% end %>
+            <% end %>
+          </tbody>
+        </table>
+      </td>
+      <td>
+        <%= link_to "Editar alumno", edit_alumno_path(@alumno), class: "btn btn-warning" %>
+      </td>
+      <td>
+        <%= button_to "Eliminar alumno", @alumno, method: :delete, class: "btn btn-danger", data: { confirm: "¿Estás seguro de que deseas eliminar este alumno?" } %>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
 <div>
-  <%= link_to "Edit this alumno", edit_alumno_path(@alumno) %> |
-  <%= link_to "Back to alumnos", alumnos_path %>
-
-  <%= button_to "Destroy this alumno", @alumno, method: :delete %>
+  <%= link_to "Regresar a alumnos", alumnos_path, class: "btn btn-secondary" %>
 </div>
