--- a/app/views/notas/show.html.erb
+++ b/app/views/notas/show.html.erb
@@ -1,10 +1,69 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @nota %>
+<% content_for :title, "Notas" %>
+
+<h1 class="display-6">Tabla de Notas</h1>
+
+<table class="table table-striped table-bordered">
+  <thead>
+    <tr>
+      <th>Nombre Alumno</th>
+      <th>Nombre Materia</th>
+      <th>Nombre Colegio</th>
+      <th>Notas</th>
+      <th>Promedio</th>
+      <th>Editar</th>
+      <th>Eliminar</th>
+    </tr>
+  </thead>
+  <tbody>
+  <tr>
+  <td><%= @nota.alumno.nombre %></td>
+  <td><%= @nota.materia.nombre %></td>
+  <td><%= @nota.alumno.colegio.nombre %></td>
+  <td>
+    <table class="table table-sm">
+    <thead>
+      <tr>
+        <th>Enero</th>
+        <th>Febrero</th>
+        <th>Marzo</th>
+        <th>Abril</th>
+        <th>Mayo</th>
+        <th>Junio</th>
+        <th>Julio</th>
+        <th>Agosto</th>
+        <th>Septiembre</th>
+        <th>Octubre</th>
+        <th>Noviembre</th>
+        <th>Diciembre</th>
+      </tr>
+    </thead>
+    <tbody>
+        <tr>
+          <td><%= @nota.enero%></td>
+          <td><%= @nota.febrero%></td>
+          <td><%= @nota.marzo%></td>
+          <td><%= @nota.abril%></td>
+          <td><%= @nota.mayo%></td>
+          <td><%= @nota.junio%></td>
+          <td><%= @nota.julio%></td>
+          <td><%= @nota.agosto%></td>
+          <td><%= @nota.septiembre%></td>
+          <td><%= @nota.octubre%></td>
+          <td><%= @nota.noviembre%></td>
+          <td><%= @nota.diciembre%></td>
+        </tr>
+    </tbody>
+    </table>
+  </td>
+  <td><%= @nota.promedio %></td>
+  <td><%= link_to "Editar", edit_nota_path(@nota), class: "btn btn-warning" %></td>
+  <td><%= button_to "Eliminar", @nota, method: :delete, class: "btn btn-danger" %></td>
+</tr>
+  </tbody>
+</table>
 
 <div>
-  <%= link_to "Edit this nota", edit_nota_path(@nota) %> |
-  <%= link_to "Back to notas", notas_path %>
-
-  <%= button_to "Destroy this nota", @nota, method: :delete %>
+  <%= link_to "Volver a notas", notas_path, class: "btn btn-secondary" %>
 </div>
