--- a/app/views/profesores/show.html.erb
+++ b/app/views/profesores/show.html.erb
@@ -1,10 +1,58 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @profesor %>
+<% content_for :title, "Profesores" %>
+
+<h1 class="display-6">Tabla de Profesores</h1>
+
+<% if flash[:alert] %>
+  <div id="flash-alert" class="alert alert-danger">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
+
+<table class="table table-striped table-bordered">
+  <thead>
+    <tr>
+      <th>Nombre</th>
+      <th>Colegio</th>
+      <th>Materias</th>
+      <th>Alumnos</th>
+      <th>Editar</th>
+      <th>Eliminar</th>
+    </tr>
+  </thead>
+  <tbody>
+      <tr>
+        <td><%= @profesor.nombre %></td>
+        <td><%= link_to @profesor.colegio.nombre, colegio_path(@profesor.colegio.id), class: "text-primary" %></td>
+        <td>
+          <table class="table table-sm">
+            <tbody>
+              <% @profesor.materias.each do |materia| %>
+                <tr>
+                  <td>Materia: <%= link_to materia.nombre, materia_path(materia.id), class: "text primary" %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </td>
+        <td>
+          <table class="table table-sm">
+            <tbody>
+              <% @profesor.alumnos.distinct.each do |alumno| %>
+                <tr>
+                  <td>Alumno: <%= link_to alumno.nombre, alumno_path(alumno.id), class: "text-primary" %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </td>
+        <td><%= link_to "Editar profesor", edit_profesor_path(@profesor), class: "btn btn-warning" %></td>
+        <td><%= button_to "Eliminar profesor", @profesor, method: :delete, class: "btn btn-danger" %></td>
+      </tr>
+  </tbody>
+</table>
 
 <div>
-  <%= link_to "Edit this profesor", edit_profesor_path(@profesor) %> |
-  <%= link_to "Back to profesores", profesores_path %>
-
-  <%= button_to "Destroy this profesor", @profesor, method: :delete %>
+  <%= link_to "Regresar a profesores", profesores_path, class: "btn btn-secondary" %>
 </div>
