--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,16 @@
  */
 
  /* app/assets/stylesheets/application.css o .scss */
-.custom-select {
+  .custom-select {
     width: 300px; /* Ajusta el ancho según tus necesidades */
   }
+
+  .estado-aprobado {
+    background-color: green !important;
+    color: white !important;
+  }
   
+  .estado-reprobado {
+    background-color: red !important;
+    color: white !important;
+  }
