--- a/app/views/colegios/index.html.erb
+++ b/app/views/colegios/index.html.erb
@@ -17,4 +17,9 @@
   </ul>
 </div>
 
-<%= link_to "Nuevo colegio", new_colegio_path, class: "btn btn-success mt-3" %>
+<% if can?(:create, @colegios) %>
+  <%= link_to "Nuevo colegio", new_colegio_path, class: "btn btn-success mt-3" %>
+<% end %>
+<br><br>
+<%= button_to 'Cerrar sesión', destroy_usuario_session_path, method: :delete, class: "btn btn-danger" %>
+
