--- a/app/views/alumnos/show.html.erb
+++ b/app/views/alumnos/show.html.erb
@@ -2,6 +2,12 @@
 
 <% content_for :title, "Alumnos" %>
 
+<% if flash[:alert] %>
+  <div class="alert alert-danger">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
+
 <h1 class="display-6">Información del Alumno</h1>
 
 <% if flash[:alert] %>
