--- a/app/views/profesores/show.html.erb
+++ b/app/views/profesores/show.html.erb
@@ -5,10 +5,11 @@
 <h1 class="display-6">Tabla de Profesores</h1>
 
 <% if flash[:alert] %>
-  <div id="flash-alert" class="alert alert-danger">
+  <div class="alert alert-danger">
     <%= flash[:alert] %>
   </div>
 <% end %>
+
 
 <table class="table table-striped table-bordered">
   <thead>
