--- a/app/views/colegios/index.html.erb
+++ b/app/views/colegios/index.html.erb
@@ -4,6 +4,13 @@
 
 <h1>Colegios</h1>
 
+<% if flash[:alert] %>
+  <div class="alert alert-danger">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
+
+
 <div id="colegios">
   <ul class="list-group">
     <% @colegios.each do |colegio| %>
