--- a/app/views/notas/index.html.erb
+++ b/app/views/notas/index.html.erb
@@ -2,6 +2,13 @@
 <% content_for :title, "Notas" %> 
 
 <h1 class="display-6">Tabla de Notas  </h1>
+
+<% if flash[:alert] %>
+  <div class="alert alert-danger">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
+
 <p class="fs-2">Aprobados</p>
 <table class="table table-striped table-bordered">
   <thead>
@@ -14,6 +21,7 @@
       <th>Estado</th>
       <th>Editar</th>
       <th>Eliminar</th>
+      <th>Mostrar</th>
     </tr>
   </thead>
   <tbody>
@@ -72,6 +80,9 @@
             <%= button_to "Eliminar", nota, method: :delete, class: "btn btn-danger" %>
           <% end %>
         </td>
+          <td>
+            <%= link_to "Mostrar", nota, class: "btn btn-primary" %>   
+          </td>
       </tr>
     <% end %>
   </tbody>
