--- a/app/views/notas/show.html.erb
+++ b/app/views/notas/show.html.erb
@@ -4,6 +4,13 @@
 
 <h1 class="display-6">Tabla de Nota</h1>
 
+<% if flash[:alert] %>
+  <div class="alert alert-danger">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
+
+
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
@@ -19,9 +26,9 @@
   </thead>
   <tbody>
   <tr>
-  <td><%= @nota.alumno.nombre %></td>
-  <td><%= @nota.materia.nombre %></td>
-  <td><%= @nota.alumno.colegio.nombre %></td>
+  <td><%= @alumno.nombre %></td>
+  <td><%= @materia.nombre %></td>
+  <td><%= @alumno.colegio.nombre %></td>
   <td>
     <table class="table table-sm">
     <thead>
