--- a/app/views/profesores/index.html.erb
+++ b/app/views/profesores/index.html.erb
@@ -4,6 +4,13 @@
 
 <h1>Profesores</h1>
 
+<% if flash[:alert] %>
+  <div class="alert alert-danger">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
+
+
 <div id="profesores">
   <ul class="list-group">
     <% @profesores.each do |profesor| %>
