--- a/app/views/notas/index.html.erb
+++ b/app/views/notas/index.html.erb
@@ -71,22 +71,31 @@
           <%= nota.estado %>
         </td>
         <td>
-        <% if can?(:edit, @notas) %>
+        <% if can?(:edit, nota) %>
           <%= link_to "Editar", edit_nota_path(nota), class: "btn btn-warning" %>
         <% end %>
         </td>
         <td>
-          <% if can?(:delete, @notas) %>
+          <% if can?(:delete, nota) %>
             <%= button_to "Eliminar", nota, method: :delete, class: "btn btn-danger" %>
           <% end %>
         </td>
-          <td>
-            <%= link_to "Mostrar", nota, class: "btn btn-primary" %>   
-          </td>
+        <td>
+          <%= link_to "Mostrar", nota, class: "btn btn-primary" %>    
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+
+<% if can?(:exportar_excel_aprobados, Nota) %>
+  <h6>Exportar notas de alumnos aprobados</h6>
+<% end %>
+
+<% if can?(:exportar_excel_aprobados, Nota) %>
+  <%= link_to 'Exportar a Excel', exportar_excel_aprobados_notas_path, class: 'btn btn-primary' %>
+<% end %>
 
 <p class="fs-2">Reprobados</p>
 <table class="table table-striped table-bordered">
@@ -100,6 +109,7 @@
       <th>Estado</th>
       <th>Editar</th>
       <th>Eliminar</th>
+      <th>Mostrar</th>
     </tr>
   </thead>
   <tbody>
@@ -149,21 +159,44 @@
           <%= nota.estado %>
         </td>
         <td>
-          <% if can?(:edit, @notas) %>
+          <% if can?(:edit, nota) %>
             <%= link_to "Editar", edit_nota_path(nota), class: "btn btn-warning" %>
           <% end %>
         </td>
         <td>
-          <% if can?(:delete, @notas) %>
+          <% if can?(:delete, nota) %>
             <%= button_to "Eliminar", nota, method: :delete, class: "btn btn-danger" %>
           <% end %>
+        </td>
+        <td>
+          <%= link_to "Mostrar", nota, class: "btn btn-primary" %>    
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<% if can?(:create, @notas) %>
+<% if can?(:exportar_excel_reprobados, Nota) %>
+  <h6>Exportar notas de alumnos reprobados</h6>
+<% end %>
+
+<% if can?(:exportar_excel_reprobados, Nota) %>
+  <%= link_to 'Exportar a Excel', exportar_excel_reprobados_notas_path, class: 'btn btn-primary' %>
+<% end %>
+
+<br><br>
+
+<% if can?(:exportar_excel_todos, Nota) %>
+<h6>Exportar notas de todos los alumnos</h6>
+<% end %>
+
+<% if can?(:exportar_excel_todos, Nota) %>
+<%= link_to 'Exportar a Excel', exportar_excel_todos_notas_path, class: 'btn btn-primary' %>
+<% end %>
+
+<br>
+
+<% if can?(:create, Nota) %>
   <%= link_to "Nueva nota", new_nota_path, class: "btn btn-success mt-3" %>
 <% end %>
 <br><br>
